# sire

./: Cargo.toml  README.md
libsire/: Cargo.toml
sire/: Cargo.toml
sire/src/: analysis.rs  eval.rs  lib.rs  sir.rs
sire/src/eval/: memory.rs  util.rs  visitor.rs
sire/src/sir/: display.rs  optimize.rs  ty.rs  visitor.rs  visitor_mut.rs
sire_run/: Cargo.toml  code.rs
sire_run/src/: main.rs  smt.rs
sire_smt/: Cargo.toml
sire_smt/src/: lib.rs  smtlib.rs  z3.rs
sire_smt/tests/: lib.rs
src/: analysis.rs  interpreter.rs  lang.rs  main.rs  mir.rs  smt.rs
