[package]
name = "sire-smt"
version = "0.1.0"
authors = ["Christian Poveda <christianpoveda@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sire = { path = "../sire" }

[dev-dependencies]
rustc = {path = "../../librustc"}
